# Scratch-Detection

./: .gitignore  CMakeLists.txt  ReadMe.md  batch_info.json  downloadpic.sh  results.json  settings  settings.json  参数调试说明.txt
Calib/: camera.yml  out_camera_data.yml  标定说明.md
cmake_modules/: FindOpenCV.cmake
include/: Camera.h  CameraUtils.h  DetectUtils.h  Detector.h  Log.hpp  Serial.h  System.h  TypeDefine.h  Websocket_server.h  client.h  detector.h  http_client.h  http_server.h  utils.h
scripts/: send.py
src/: Camera.cpp  CameraUtils.cpp  DetectUtils.cpp  Detector.cpp  GxAcquireContinuous.cpp  GxAcquireContinuousSofttrigger.cpp  Log.cpp  Serial.cpp  System.cpp  calibration.cpp  cam_callback_demo.cpp  camera_demo.cpp  client.cpp  color.cpp  curl_demo.cpp  demo.cpp  detect_demo.cpp  detector.cpp  http_server.cpp  mono.cpp  server_demo.cpp  utils.cpp
src/camera/: Camera.cpp
src/detection/: DetectUtils.cpp  Detector.cpp  haiya.cpp
src/http/: client.cpp
src/web/: Websocket_server.cpp  http_client.cpp  http_server.cpp
test/: camera_demo.cpp  curl_demo.cpp  file_demo.cpp  log_test.cpp  mono_demo.cpp  serial.cpp  server_demo.cpp  system_test.cpp  websockettest.cpp
web/: index.html  mystyle.css  updatedata.js
